# slow_gazelle_018_repro

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  godeps.bzl  main.go
